WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223147
RenderStyle::getRoundedInnerBorderFor should never produce a rect with negative width/height
https://bugs.webkit.org/show_bug.cgi?id=223147
Summary
RenderStyle::getRoundedInnerBorderFor should never produce a rect with negati...
alan
Reported
2021-03-12 20:56:38 PST
ssia
Attachments
Patch
(4.15 KB, patch)
2021-03-12 21:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-03-12 21:20:52 PST
Created
attachment 423095
[details]
Patch
EWS
Comment 2
2021-03-15 14:27:46 PDT
Committed
r274440
: <
https://commits.webkit.org/r274440
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423095
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-03-15 14:28:18 PDT
<
rdar://problem/75447364
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug