RenderStyle::getRoundedInnerBorderFor should never produce a rect with negative width/height https://bugs.webkit.org/show_bug.cgi?id=223147

Reviewed by Simon Fraser.

Source/WebCore:

Width/height may get resolved to negative values when the rect goemetry (left/top) is at maximum LayoutUnit.

Test: fast/shapes/assert-when-rounded-rect-overflows.html

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::getRoundedInnerBorderFor const):

LayoutTests:

* fast/shapes/assert-when-rounded-rect-overflows-expected.txt: Added.
* fast/shapes/assert-when-rounded-rect-overflows.html: Added.


Canonical link: https://commits.webkit.org/235305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274440 268f45cc-cd09-0410-ab3c-d52691b4dbfc